[www.hlidacshopu.cz] Reviews

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -277,51 +277,42 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Co o&nbsp;nás říkají uživatelé</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <span class="text--grey">Marek Sukup</span><br>
-            <span class="text--light-grey">10. 12. 2018</span>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Skvělý doplněk a výborný nápad něco takového vytvořit. Človek si
-              tak udelá představu o&nbsp;tom, jak funguji slevy a z&nbsp;jake ceny se
-              slevuje…</p>
-          </div>
+      <div class="review mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="review__header">
+          <img class="avatar" alt="" src="/assets/img/avatar/marek-sukup.jpg" loading="lazy">
+          <span class="review__author">Marek Sukup</span><br>
+          <span class="review__date text--light-grey">10. 12. 2018</span>
+        </div>
+        <div class="review__content">
+          <p>Skvělý doplněk a výborný nápad něco takového vytvořit. Človek si
+            tak udelá představu o&nbsp;tom, jak funguji slevy a z&nbsp;jake ceny se
+            slevuje…</p>
         </div>
       </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <span class="text--grey">Táňa Lálová</span><br>
-            <span class="text--light-grey">Mluvčí Mall.cz</span>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Aktivity, jako je například Apify vítáme, protože pomáhají
-              zákazníkům s&nbsp;orientací na trhu. Naším cílem je být transparentní a
-              umožnit lidem rychle a snadno ověřit uvedenou&nbsp;cenu.</p>
-          </div>
+      <div class="review mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="review__header">
+          <img class="avatar" alt="" src="/assets/img/avatar/tana-lalova.jpg" loading="lazy">
+          <span class="review__author">Táňa Lálová</span><br>
+          <span class="review__date text--light-grey">Mluvčí Mall.cz</span>
+        </div>
+        <div class="review__content">
+          <p>Aktivity, jako je například Apify vítáme, protože pomáhají
+            zákazníkům s&nbsp;orientací na trhu. Naším cílem je být transparentní a
+            umožnit lidem rychle a snadno ověřit uvedenou&nbsp;cenu.</p>
         </div>
       </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <span class="text--grey">Jan Verner</span><br>
-            <span class="text--light-grey">14. 12. 2018</span>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Poprvé, kdy píšu recenzi na nějaký plugin chromu. A to proto, jak je úžasný.
-              Miluje ho každý, komu ho v okolí ukazuji. Super práce, samozřejmě by bylo super,
-              kdyby to hlídalo více e-shopů, klidně napsat API tak, aby mohli lidé pomáhat.</p>
-          </div>
+      <div class="review mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="review__header">
+          <img class="avatar" alt="" src="/assets/img/avatar/jan-verner.jpg" loading="lazy">
+          <span class="review__author">Jan Verner</span><br>
+          <span class="review__date text--light-grey">14. 12. 2018</span>
+        </div>
+        <div class="review__content">
+          <p>Poprvé, kdy píšu recenzi na nějaký plugin chromu. A to proto, jak je úžasný.
+            Miluje ho každý, komu ho v okolí ukazuji. Super práce, samozřejmě by bylo super,
+            kdyby to hlídalo více e-shopů, klidně napsat API tak, aby mohli lidé pomáhat.</p>
         </div>
       </div>
       <!--div class="references_link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
