--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -33,7 +33,7 @@
                   fill="#CFD4DE"/>
               </svg>
             </div>
-            <input required type="url" name="url"
+            <input required type="url" name="url" autofocus
                    placeholder="Zadejte odkaz produktu&hellip;"
                    title="Zadejte adresu stránky s detailem produktu.">
           </label>
@@ -350,8 +350,8 @@
 
 <div id="hlidac-shopu-modal" class="modal modal--hidden">
   <div class="modal__inner mdc-layout-grid">
-    <div class="modal__close">
-      <a href="/" title="Zavřít">&times;</a>
+    <div class="modal__close" title="Zavřít - Esc">
+      <a href="/">&times;</a>
     </div>
     <div id="hlidac-shopu-modal__placeholder"></div>
   </div>
@@ -553,10 +553,21 @@
     }
   });
 
+  addEventListener("keydown", e => {
+    if (e.key === "Escape" && history.state && history.state.showModal) {
+      history.pushState({showModal: false}, null, "/");
+      hideResultsModal();
+      form["url"].value = "";
+      form["url"].focus();
+    }
+  });
+
   addEventListener("load", e => {
     const searchParams = new URLSearchParams(location.search);
     if (searchParams.has("url")) {
-      renderResultsModal(searchParams.get("url"));
+      const detailUri = searchParams.get("url");
+      history.replaceState({showModal: true, detailUri}, null);
+      renderResultsModal(detailUri);
     }
     render(eShopList(Array.from(shops.values())), eShops);
     eShopsCount.innerText = shops.size.toLocaleString("cs");
