--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -461,6 +461,15 @@
         tooltips: {
           mode: "index",
           intersect: false,
+          backgroundColor: "#FCF4A7",
+          borderColor: "#FBEA61",
+          borderWidth: 2,
+          bodyFontColor: "#1D3650",
+          bodySpacing: 4,
+          titleFontColor: "#1D3650",
+          xPadding: 12,
+          yPadding: 8,
+          caretSize: 12,
           callbacks: {
             title(item, data) {
               const date = data.labels[item[0].index];
