Caffe - oprava JS kodu

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -280,7 +280,7 @@
             <div class="mdc-layout-grid__cell">
               <h3>Téma</h3>
               <span>{{upcomingEvent.shortTitle}}</span>
-              {% if upComingEvent.lecturers %}
+              {% if upcomingEvent.lecturers %}
               <br>
               <h3>Přednášející</h3>
               <span>
