Blockchain - Lopusek Avatar

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -610,7 +610,7 @@
               <div
                 class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
                 <img class="person__photo"
-                     src="https://res.cloudinary.com/topmonks/image/upload/v1563778591/avatars/jan-lopusek_avatar_gcmert.png"
+                     src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572875908/avatar/jan-lopusek.jpg"
                      alt="[photo] Jan Lopusek" width="32" height="32">
                 <span class="name">Jan Lopusek</span>
               </div>
