[www.hlidacshopu.cz] Remove article without our mention

--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -17,7 +17,7 @@
 <section class="media">
   <div class="mdc-layout-grid">
     <div class="layout-wrapper">
-      <h2 class="media-heading">2019</h2>
+      <!--<h2 class="media-heading">2019</h2>
       <div class="media-article-list">
         <article class="media-article-item">
           <div class="media__image">
@@ -38,7 +38,7 @@
               u&nbsp;některých e-shopů odstartoval.</p>
           </div>
         </article>
-      </div>
+      </div>-->
       <h2 class="media-heading">2018</h2>
       <div class="media-article-list">
         <article class="media-article-item">
