--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -417,9 +417,13 @@
   });
 
   function plot(canvas, {data: prices}) {
-    const min = Math.min(...prices.currentPrice.filter(p => p.y !== null).map(p => p.y));
-    const max = Math.max(...prices.currentPrice.filter(p => p.y !== null).map(p => p.y));
+    const values = prices.currentPrice.filter(p => p.y !== null).map(p => p.y);
+    const min = Math.min(...values);
+    const max = Math.max(...values);
     const ctx = canvas.getContext("2d");
+
+    const count = values.length;
+    const stepSize = Math.floor(count / 12);
 
     return new Chart(ctx, {
       type: "line",
@@ -498,9 +502,9 @@
             type: "time",
             time: {
               unit: "day",
-              stepSize: 14,
+              stepSize,
               displayFormats: {
-                day: "D. MM. YYYY"
+                day: "D. M. YYYY"
               }
             },
           }],
