Icons SVGs fix and cleanup

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -249,7 +249,7 @@
           <a href="https://www.adler.info/"
              title="jdi na Adler homepage">{{ sprite('img_logo_adler', '[logo] Adler') }}</a>
           <a href="https://www.countrylife.cz/"
-             title="jdi na Country Life homepage">{{ sprite('countrylifelogo', '[logo] Country Life') }}</a>
+             title="jdi na Country Life homepage">{{ sprite('img_logo_country-life', '[logo] Country Life') }}</a>
         </div>
       </div>
     </div>
