--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -69,7 +69,13 @@
   const tableRoot = document.getElementById("table-root");
   const formatPercents = x => `${Math.round(100 * x).toLocaleString("cs")} %`;
   const timeout = ms => new Promise((_, reject) => setTimeout(() => reject(new Error("timeout")), ms));
-  const shopStats = ({key, count_all, count_bf, declared_sale, real_sale, percent_bf}) => ({key, allProducts: parseInt(count_all), bfProducts: count_bf && parseInt(count_bf) || "-", avgClaimedDiscount: "-", avgRealDiscount: "-"});
+  const shopStats = ({key, count_all, count_bf, declared_sale, real_sale, percent_bf}) => ({
+    key,
+    allProducts: parseInt(count_all),
+    bfProducts: count_bf && parseInt(count_bf) || "-",
+    avgClaimedDiscount: declared_sale && formatPercents(parseFloat(declared_sale)/100) || "-",
+    avgRealDiscount: real_sale && formatPercents(parseFloat(real_sale))|| "-"
+  });
   const shops = new Map([
     ["alza", {name: "Alza", logo: "alza_logo", url: "https://www.alza.cz/", viewBox: "0 0 60 19"}],
     ["czc", {name: "CZC.CZ", logo: "czc.cz_logo", url: "https://www.czc.cz/", viewBox: "0 0 55 13"}],
@@ -91,7 +97,8 @@
       const resp = await Promise.race([timeout(4000), fetch("https://api.hlidacshopu.cz/shop-numbers")]);
       if (!resp.ok) throw new Error("API error");
       const shopsData = await resp.json();
-      const data = shopsData.map(shopStats).map(x => Object.assign({}, x, shops.get(x.key)));
+      const shopsStatsData = new Map(shopsData.map(shopStats).map(x => [x.key, x]));
+      const data = Array.from(shops.entries()).map(([key, x]) => Object.assign({}, x, shopsStatsData.get(key)));
       render(tableTemplate(data), tableRoot);
     }
     catch (ex) {
