--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -265,7 +265,7 @@
       </dl>
       <dl class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <dt class="text--grey">Počet produktů</dt>
-        <dd class="number">2 000 000+</dd>
+        <dd id="products-count" class="number">1 000 000</dd>
       </dl>
     </div>
   </div>
@@ -525,11 +525,13 @@
   const form = document.getElementById("compare-form");
   const eShops = document.getElementById("e-shopy");
   const eShopsCount = document.getElementById("e-shops-count");
+  const productsCount = document.getElementById("products-count");
   const modal = document.getElementById("hlidac-shopu-modal");
   const modalRenderRoot = document.getElementById("hlidac-shopu-modal__placeholder");
   const chart = () => document.getElementById("hlidac-shopu-chart");
   const apiUrl = detailUri => `https://api.hlidacshopu.cz/shop?url=${encodeURIComponent(detailUri)}&metadata=1`;
   const meta = ({itemImage, itemName, shop}) => ({shop, name: itemName, imageUrl: itemImage === "null" ? null : itemImage});
+  const shopStats = ({key, count_all, count_bf, declared_sale, real_sale, percent_bf}) => ({key, allProducts: parseInt(count_all), bfProducts: count_bf && parseInt(count_bf) || "-", avgClaimedDiscount: "-", avgRealDiscount: "-"});
   const formatMoney = x => x.toLocaleString("cs", {minimumFractionDigits: 2, maximumFractionDigits: 2}).replace(/,00/g, ",-");
   const formatPercents = x => `${Math.round(100 * x).toLocaleString("cs")} %`;
   const haveToCloseModal = t => t === modal || t.classList.contains("modal__close") || t.parentElement.classList.contains("modal__close");
@@ -575,7 +577,7 @@
     }
   });
 
-  addEventListener("load", e => {
+  addEventListener("load", async e => {
     const searchParams = new URLSearchParams(location.search);
     if (searchParams.has("url")) {
       const detailUri = searchParams.get("url");
@@ -583,6 +585,7 @@
       renderResultsModal(detailUri);
     }
     render(eShopList(Array.from(shops.values())), eShops);
+    productsCount.innerText = (await fetchShopsStats()).reduce((acc, x) => acc + x.allProducts, 0).toLocaleString("cs");
     eShopsCount.innerText = shops.size.toLocaleString("cs");
   });
 
@@ -623,6 +626,13 @@
       meta: meta(metadata),
       data: createDataset(data)
     };
+  }
+
+  async function fetchShopsStats() {
+    const resp = await Promise.race([timeout(4000), fetch("https://api.hlidacshopu.cz/shop-numbers")]);
+    if (!resp.ok) throw new Error("API error");
+    const shopsData = await resp.json();
+    return shopsData.map(shopStats).map(x => Object.assign({}, x, shops.get(x.key)));
   }
 
   function templateData(detailUrl, { meta: { shop, name, imageUrl }, data: { currentPrice, originalPrice } }) {
