[www.hlidacshopu.cz] Updared header on dashboard

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -5,7 +5,6 @@
 
 {% block styles %}
 <style>
-
   .shops-stats {
     border-spacing: 0 12px;
   }
@@ -18,7 +17,7 @@
     text-align: left;
     font-weight: normal;
     font-size: 14px;
-    padding-bottom: 12px;
+    padding: 12px;
     border-bottom: 1px solid #DADADA;
   }
   .shops-stats thead th:first-of-type {
