--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -136,23 +136,23 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 browser-list">
         <div class="browser-support">
           <div class="browser-support__icon">
-            <img loading="lazy" src="/assets/img/chrome.svg" alt="Barevná ikona prohlížeče Google Chrome"></div>
-          <p class="sub-info--grey">Podporujeme<br>prohlížeč Google&nbsp;Chrome</p>
+            <img loading="lazy" src="/assets/img/chrome.svg" alt="Ikona prohlížeče Google Chrome"></div>
+          <p class="sub-info--grey">Podporujeme <br>prohlížeč Google&nbsp;Chrome</p>
         </div>
         <div class="browser-support">
           <div class="browser-support__icon browser-support__icon--disabled">
-            <img loading="lazy" src="/assets/img/firefox.svg" alt="Barevná ikona prohlížeče Firefox"></div>
-          <p class="sub-info--grey">Brzy podpora pro<br>prohlížeč Firefox</p>
+            <img loading="lazy" src="/assets/img/firefox.svg" alt="Ikona prohlížeče Firefox"></div>
+          <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Firefox</p>
         </div>
         <div class="browser-support">
-          <div class="browser-support__icon browser-support__icon--disabled">
-            <img loading="lazy" src="/assets/img/brave.svg" alt="Šedá ikona prohlížeče Brave"></div>
-          <p class="sub-info--grey">Brzy podpora pro<br>prohlížeč Brave</p>
+          <div class="browser-support__icon">
+            <img loading="lazy" src="/assets/img/brave.svg" alt="Ikona prohlížeče Brave"></div>
+          <p class="sub-info--grey">Podporujeme <br>prohlížeč Brave</p>
         </div>
         <div class="browser-support">
-          <div class="browser-support__icon browser-support__icon--disabled">
-            <img src="/assets/img/edge.svg" alt="Šedá ikona prohlížeče Microsoft Edge"></div>
-          <p class="sub-info--grey">Brzy podpora pro<br>prohlížeč Microsoft&nbsp;Edge</p>
+          <div class="browser-support__icon">
+            <img loading="lazy" src="https://pbs.twimg.com/profile_images/1191435169804062721/ToPeBEVd_400x400.png" alt="Ikona prohlížeče Microsoft Edge Beta"></div>
+          <p class="sub-info--grey">Podporujeme <br>prohlížeč Microsoft&nbsp;Edge Beta</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
