[www.hlidacshopu.cz] Clickable browser logos

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -4,7 +4,8 @@
 {% block title %}Hlídač shopů{% endblock %}
 
 {% block preload %}
-<link rel="prefetch" href="https://cdn.jsdelivr.net/npm/chart.js@2.9.1/dist/Chart.bundle.min.js" as="script" crossorigin="anonymous">
+<link rel="prefetch" href="https://cdn.jsdelivr.net/npm/chart.js@2.9.1/dist/Chart.bundle.min.js" as="script"
+      crossorigin="anonymous">
 <link rel="modulepreload" href="https://unpkg.com/lit-html@1.1.1/lit-html.js?module" crossorigin="anonymous">
 {% endblock %}
 
@@ -40,7 +41,8 @@
           <button type="submit">OVĚŘIT VÝVOJ CENY</button>
         </form>
       </div>
-      <div class="example mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div
+        class="example mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <picture>
           <source media="screen and (max-width: 479px)"
                   srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_380/v1572527403/www.hlidacshopu.cz/porovnani-cen-mobile.png 1x,
@@ -136,7 +138,11 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 browser-list">
         <div class="browser-support">
           <div class="browser-support__icon">
-            <img loading="lazy" src="/assets/img/chrome.svg" alt="Ikona prohlížeče Google Chrome"></div>
+            <a
+              href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+              <img loading="lazy" src="/assets/img/chrome.svg" alt="Ikona prohlížeče Google Chrome">
+            </a>
+          </div>
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Google&nbsp;Chrome</p>
         </div>
         <div class="browser-support">
@@ -146,12 +152,21 @@
         </div>
         <div class="browser-support">
           <div class="browser-support__icon">
-            <img loading="lazy" src="/assets/img/brave.svg" alt="Ikona prohlížeče Brave"></div>
+            <a
+              href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+              <img loading="lazy" src="/assets/img/brave.svg" alt="Ikona prohlížeče Brave">
+            </a>
+          </div>
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Brave</p>
         </div>
         <div class="browser-support">
           <div class="browser-support__icon">
-            <img loading="lazy" src="https://pbs.twimg.com/profile_images/1191435169804062721/ToPeBEVd_400x400.png" alt="Ikona prohlížeče Microsoft Edge Beta"></div>
+            <a
+              href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+              <img loading="lazy" src="https://pbs.twimg.com/profile_images/1191435169804062721/ToPeBEVd_400x400.png"
+                   alt="Ikona prohlížeče Microsoft Edge Beta">
+            </a>
+          </div>
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Microsoft&nbsp;Edge Beta</p>
         </div>
       </div>
@@ -191,7 +206,9 @@
                width="100%">
         </picture>
         <h3>Najděte rozšíření v&nbsp;obchodě</h3>
-        <p class="grey-text">Přejděte do <a href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk" class="text--purple">obchodu Chrome</a> na stránku Hlídače Shopů.</p>
+        <p class="grey-text">Přejděte do <a
+          href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk"
+          class="text--purple">obchodu Chrome</a> na stránku Hlídače Shopů.</p>
       </div>
       <div class="step_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <picture>
@@ -242,7 +259,9 @@
           Teď už jen stačí přejít do vašeho oblíbeného e-shopu a vesele kontrolovat jeho cenotvorbu.
         </p>
         <div class="btn">
-          <a class="button" role="button" href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">Nainstalovat do prohlížeče</a>
+          <a class="button" role="button"
+             href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">Nainstalovat
+            do prohlížeče</a>
         </div>
       </div>
     </div>
