[www.hlidacshopu.cz] Fixed some validation errors

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -26,14 +26,14 @@
             díky němu snadno poznáte, jestli nakupujete se slevou nebo&nbsp;ne.</p>
 
           <label class="url-input">
-            <div class="url-input__icon">
+            <i class="url-input__icon">
               <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <title>Hledat</title>
                 <path
                   d="M24.7144 22.1558L20.6248 18.067C20.4403 17.8824 20.1901 17.7799 19.9275 17.7799H19.2589C20.391 16.3322 21.0637 14.5113 21.0637 12.5304C21.0637 7.81818 17.2449 4 12.5319 4C7.81883 4 4 7.81818 4 12.5304C4 17.2427 7.81883 21.0608 12.5319 21.0608C14.5131 21.0608 16.3343 20.3882 17.7823 19.2563V19.9248C17.7823 20.1873 17.8848 20.4375 18.0694 20.622L22.1589 24.7109C22.5445 25.0964 23.168 25.0964 23.5495 24.7109L24.7103 23.5502C25.0959 23.1647 25.0959 22.5414 24.7144 22.1558ZM12.5319 17.7799C9.63186 17.7799 7.28149 15.434 7.28149 12.5304C7.28149 9.6309 9.62776 7.28093 12.5319 7.28093C15.4319 7.28093 17.7823 9.62679 17.7823 12.5304C17.7823 15.4299 15.436 17.7799 12.5319 17.7799Z"
                   fill="#CFD4DE"/>
               </svg>
-            </div>
+            </i>
             <input required type="url" name="url" autofocus
                    placeholder="Zadejte odkaz produktu&hellip;"
                    title="Zadejte adresu stránky s detailem produktu.">
@@ -56,9 +56,8 @@
                   srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_500/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
                           https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_500/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1.5x,
                           https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_500/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x">
-          <img alt="Hlídač Shopů - Ukázka"
-               src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
-               width="100%">
+          <img alt="Hlídač Shopů - Ukázka" class="responsive"
+               src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png">
         </picture>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -107,7 +106,7 @@
           <source media="screen and (max-width: 479px)"
                   srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_420/v1572766113/www.hlidacshopu.cz/jak-cist-graf-mobile.png 1x,
                           https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_420/v1572766113/www.hlidacshopu.cz/jak-cist-graf-mobile.png 1.5x,
-                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_420/v1572766113/www.hlidacshopu.cz/jak-cist-graf-mobile.png 2x,">
+                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_420/v1572766113/www.hlidacshopu.cz/jak-cist-graf-mobile.png 2x">
           <source media="screen and (min-width: 480px) and (max-width: 879px)"
                   srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_740/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1x,
                           https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_740/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
@@ -116,10 +115,9 @@
                   srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1x,
                           https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
                           https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 2x">
-          <img loading="lazy"
+          <img loading="lazy" class="responsive"
                alt="Jak Hlídač Shopů vypadá a jak číst graf?"
-               src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png"
-               width="100%">
+               src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png">
         </picture>
         <p>Hlídač Shopů si můžete <b>nainstalovat přímo do svého prohlížeče</b> a
           hlídat tak největší e-shopy a jejich někdy prapodivné taktiky při
@@ -358,10 +356,9 @@
                 srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1x,
                         https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1.5x,
                         https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 2x">
-        <img loading="lazy"
+        <img loading="lazy" class="responsive"
              alt="Obrázek nejzajímavějších slev"
-             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png"
-             width="100%">
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png">
       </picture>
     </div>
   </div>
