--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/master.html' %}
 {% from 'macros/helpers.html' import sprite %}
 
-{% block title %}Dashboard Hlídače shopů{% endblock %}
+{% block title %}Přehled dat Hlídače shopů{% endblock %}
 
 {% block styles %}
 <style>
@@ -57,8 +57,34 @@
   <div class="mdc-layout-grid">
     <div class="layout-wrapper">
       <div class="mdc-layout-grid__inner">
-        <div id="table-root" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Přehled našich dat</h2>
 
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <table class="shops-stats">
+            <colgroup>
+              <col width="150">
+            </colgroup>
+            <thead>
+            <tr>
+              <th scope="col">E-shop</th>
+              <th scope="col">Celkový počet produktů</th>
+              <th scope="col">Počet produktů v Black Friday</th>
+              <th scope="col">Průměrná uváděná sleva</th>
+              <th scope="col">Průměrná reálná sleva</th>
+            </tr>
+            </thead>
+            <tbody id="table-root">
+              <tr>
+                <td colspan="5">
+                  <div class=loading-container>
+                    <div class=loader aria-label="Načítám data…">Chvilku strpení, načítají se data&hellip;</div>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -71,14 +97,14 @@
   import { html, svg, render } from "https://unpkg.com/lit-html@1.1.1/lit-html.js?module";
 
   const tableRoot = document.getElementById("table-root");
-  const formatPercents = x => `${Math.round(x).toLocaleString("cs")} %`;
+  const formatPercents = x => x && `${Math.round(x).toLocaleString("cs")} %`;
   const timeout = ms => new Promise((_, reject) => setTimeout(() => reject(new Error("timeout")), ms));
   const shopStats = ({ key, count_all, count_bf, declared_sale, real_sale, percent_bf }) => ({
     key,
     allProducts: parseInt(count_all),
-    bfProducts: count_bf && parseInt(count_bf) || "-",
-    avgClaimedDiscount: declared_sale && formatPercents(parseFloat(declared_sale)) || "-",
-    avgRealDiscount: real_sale && formatPercents(parseFloat(real_sale)) || "-"
+    bfProducts: count_bf && parseInt(count_bf),
+    avgClaimedDiscount: declared_sale && parseFloat(declared_sale),
+    avgRealDiscount: real_sale && parseFloat(real_sale)
   });
   const shops = new Map([
     ["alza", { name: "Alza", logo: "alza_logo", url: "https://www.alza.cz/", viewBox: "0 0 60 19" }],
@@ -120,25 +146,7 @@
   });
 
   function tableTemplate(data) {
-    return html`
-      <table class="shops-stats">
-        <colgroup>
-          <col width="150">
-        </colgroup>
-        <thead>
-          <tr>
-            <th scope="col">E-shop</th>
-            <th scope="col">Celkový počet produktů</th>
-            <th scope="col">Počet produktů v Black Friday</th>
-            <th scope="col">Průměrná uváděná sleva</th>
-            <th scope="col">Průměrná reálná sleva</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${data.map(shopTemplate)}
-        </tbody>
-      </table>
-    `;
+    return data.map(shopTemplate);
   }
 
   function shopTemplate({ name, url, logo, viewBox, allProducts, bfProducts, avgClaimedDiscount, avgRealDiscount }) {
@@ -146,9 +154,9 @@
       <tr class="dashboard-row">
         <th scope="row">${logoTemplate({ name, url, logo, viewBox })}</th>
         <td>${allProducts.toLocaleString("cs")}</td>
-        <td>${bfProducts.toLocaleString("cs")}</td>
-        <td>${avgClaimedDiscount}</td>
-        <td>${avgRealDiscount}</td>
+        <td>${bfProducts && bfProducts.toLocaleString("cs") || "-"}</td>
+        <td>${formatPercents(avgClaimedDiscount) || "-"}</td>
+        <td>${formatPercents(avgRealDiscount) || "-"}</td>
       </tr>
     `;
   }
