[www.hlidacshopu.cz] Added real discount explanation to dashboard

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -86,6 +86,9 @@
             </tbody>
           </table>
         </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <p class="explanation">Poznámka: <em>Reálná sleva</em> se počítá jako aktuální cena po slevě ku maxímální ceně, za kterou se zboží prodávalo za posledních 90 dní.</p>
+        </div>
       </div>
     </div>
   </div>
