[www.hlidacshopu.cz] Shorter header text on dashboard

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -69,8 +69,8 @@
             <thead>
             <tr>
               <th scope="col">E-shop</th>
-              <th scope="col">Celkový počet produktů</th>
-              <th scope="col">Počet produktů v Black Friday</th>
+              <th scope="col">Produktů celkem</th>
+              <th scope="col">Produktů v Black Friday</th>
               <th scope="col">Průměrná uváděná sleva</th>
               <th scope="col">Průměrná reálná sleva</th>
             </tr>
